@@ -1,13 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.384 2005/09/20 23:55:49 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.385 2005/09/21 03:15:04 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
   20 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
   prevent do_recommended() from being run twice
+  rewrite do_recommended() to be more robust
 
   17 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
